Fix versioning scheme, update, clean up

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  sty2dtx.doc.tar.xz: 4971c98f6ba50c003b0d64c1c05c68e840a478cf
-  sty2dtx.tar.xz: 4e5dbb211a6db3f0d894746df5dd5c1139586266
+  sty2dtx.doc.r64967.tar.xz: a441e9baeecee7896d32ce0f980d2abd04c55525
+  sty2dtx.r64967.tar.xz: 48d60d1b665b828742083796a92096c433562e91
